# flask-tutorial

./: README.md  pyproject.toml
.github/workflows/: CI.yml
app/: __init__.py  auth.py  blog.py
tests/: dummy_test.py
